<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.davismcclure.afinal.MainActivity">

    <TextView
        android:text="@string/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appTitle"
        android:textColor="#000"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/caramel"
        android:adjustViewBounds="true"
        android:maxWidth="500dp"
        android:maxHeight="500dp"
        android:scaleType="fitCenter"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flavorRadioGroup"
        android:orientation="vertical"
        android:layout_below="@+id/treatTypeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor1_radio"
            android:id="@+id/radioButton1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor2_radio"
            android:id="@+id/radioButton2"
            android:layout_below="@+id/flavorRadioGroup"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flavor3_radio"
            android:id="@+id/radioButton3"
            android:layout_weight="1"
            android:layout_below="@+id/radioButton2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RadioGroup>

    <TextView
        android:text="@string/treat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:id="@+id/imageTitle"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/flavorRadioGroup"
        android:layout_toEndOf="@+id/flavorRadioGroup"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="31dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cupToggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/treatTypeSpinner"
        android:entries="@array/treatType"
        android:layout_alignRight="@+id/nameEditText"
        android:layout_alignEnd="@+id/nameEditText" />

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="findClass"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:layout_below="@+id/appTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cupToggleButton"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:layout_below="@+id/appTitle"
        android:layout_toRightOf="@+id/appTitle"
        android:layout_toEndOf="@+id/appTitle" />

    <CheckBox
        android:text="@string/hotFudge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sprinkles"
        android:layout_alignLeft="@+id/sprinkles"
        android:layout_alignStart="@+id/sprinkles"
        android:id="@+id/hotFudge" />

    <CheckBox
        android:text="@string/nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hotFudge"
        android:layout_alignLeft="@+id/hotFudge"
        android:layout_alignStart="@+id/hotFudge"
        android:id="@+id/nuts" />

    <Button
        android:text="@string/findCreation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/findCreation"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/cupToggleButton"
        android:layout_alignEnd="@+id/cupToggleButton"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp" />

    <CheckBox
        android:text="@string/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sprinkles"
        android:layout_alignTop="@+id/flavorRadioGroup"
        android:layout_alignLeft="@+id/imageTitle"
        android:layout_alignStart="@+id/imageTitle"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

</RelativeLayout>
